using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorParameters
{
    public const string HORIIZONTAL_MOVEMENT = "HorizMovement";
    public const string VERTICAL_MOVEMENT = "VertMovement";
    public const string MOVING = "Moving";
    public const string SPEED = "CharSpeed";
    public const string ATTACK = "Attack";
    public const string AIM = "Aiming";
    public const string DEATH = "Death";
    public const string BLOCKING = "Blocking";
    public const string DAMAGED = "Damaged";
    public const string ARROW_PULL = "ArrowPull";
    public const string COFFIN_OPEN = "Open";
    public const string COFFIN_CLOSE = "Close";
    public const string COFFIN_RISEHEIGHT = "Rise";
    public const string COFFIN_ISRISING = "Rising";
}
